--- a/model_loading.ipynb
+++ b/model_loading.ipynb
@@ -18,14 +18,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "1d295595",
    "metadata": {},
    "outputs": [],
    "source": [
     "import mlflow.sklearn\n",
     "\n",
-    "model_name = \"sk-learn-logistics-reg-model\"\n",
+    "model_name = \"GradientBoostingRegressor_California\"\n",
     "model_version = \"1\" \n",
     "\n",
     "model = mlflow.sklearn.load_model(f\"models:/{model_name}/{model_version}\")"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c33acc1d",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression(max_iter=1000, random_state=42)\n"
+      "GradientBoostingRegressor(random_state=42)\n"
      ]
     }
    ],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "afc77151",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "fd8e76cb",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LogisticRegression(max_iter=1000, random_state=42)\n"
+      "GradientBoostingRegressor(random_state=42)\n"
      ]
     }
    ],
