--- a/model_loading.ipynb
+++ b/model_loading.ipynb
@@ -59,12 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "afc77151",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = mlflow.sklearn.load_model(f\"models:/{model_name}@new_model\")"
+    "alias = \"experiment\"\n",
+    "model = mlflow.sklearn.load_model(f\"models:/{model_name}@{alias}\")"
    ]
   },
   {
